@@ -44,6 +44,7 @@
 - Fixed being popup getting stuck under the mouse
 - Fixed item links with empty item name to look up name from Item DB
 - Fixed spaces getting added to chat every 50 characters
+- Fixed empty Equipment window on freshly created character
 - Updated to tmwAthena protocol changes
 - Updated to Manaserv protocol changes (specials, guilds, debug mode, skills, text particles)
 - CMake: Use GNUInstallDirs and made PKG_DATADIR / PKG_BINDIR paths modifiable
